2014-02-18  Uros Bizjak  <ubizjak@gmail.com>

	PR target/60205
	* config/i386/i386.h (struct ix86_args): Add warn_avx512f.
	* config/i386/i386.c (init_cumulative_args): Initialize warn_avx512f.
	(type_natural_mode): Warn ABI change when %zmm register is not
	available for AVX512F vector value passing.

2014-02-18  Kai Tietz  <ktietz@redhat.com>

	PR target/60193
	* config/i386/i386.c (ix86_expand_prologue): Use value in
	rax register as displacement when restoring %r10 or %rax.
	Fix wrong offset when restoring both registers.

2014-02-18  Eric Botcazou  <ebotcazou@adacore.com>

	* ipa-prop.c (compute_complex_ancestor_jump_func): Replace overzealous
	assertion with conditional return.

2014-02-18  Jakub Jelinek  <jakub@redhat.com>
	    Uros Bizjak  <ubizjak@gmail.com>

	PR driver/60233
	* config/i386/driver-i386.c (host_detect_local_cpu): If
	YMM state is not saved by the OS, also clear has_f16c.  Move
	CPUID 0x80000001 handling before YMM state saving checking.

2014-02-18  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/58960
	* haifa-sched.c (alloc_global_sched_pressure_data): New,
	factored out from ...
	(sched_init): ... here.
	(free_global_sched_pressure_data): New, factored out from ...
	(sched_finish): ... here.
	* sched-int.h (free_global_sched_pressure_data): Declare.
	* sched-rgn.c (nr_regions_initial): New static global.
	(haifa_find_rgns): Initialize it.
	(schedule_region): Disable sched-pressure for the newly
	generated regions.

2014-02-17  Richard Biener  <rguenther@suse.de>

	* tree-vect-stmts.c (free_stmt_vec_info): Clear BB and
	release SSA defs of pattern stmts.

2014-02-17  Richard Biener  <rguenther@suse.de>

	* tree-inline.c (expand_call_inline): Release the virtual
	operand defined by the call we are about to inline.

2014-02-17  Richard Biener  <rguenther@suse.de>

	* tree-ssa.c (verify_ssa): If verify_def found an error, ICE.

2014-02-17  Kirill Yukhin  <kirill.yukhin@intel.com>
	    Ilya Tocar  <ilya.tocar@intel.com>
